--- a/app/src/main/res/drawable/item_drawer_background.xml
+++ b/app/src/main/res/drawable/item_drawer_background.xml
@@ -1,9 +1,6 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item
-        android:drawable="@drawable/shape_drawer_rectangle_checked"
-
-        android:state_checked= "true" />
-    <item android:drawable="@drawable/shape_drawer_rectangle" />
+    <item android:drawable="@drawable/shape_drawer_rectangle_checked" android:state_enabled="true" android:state_pressed="true" />
+    <item android:drawable="@drawable/shape_drawer_rectangle" android:state_enabled="true" android:state_pressed="false"/>
 
 
 </selector>
