--- a/app/src/main/res/layout/activity_act_dashboard_navigation.xml
+++ b/app/src/main/res/layout/activity_act_dashboard_navigation.xml
@@ -35,8 +35,8 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:paddingBottom="@dimen/activity_vertical_margin"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp"
                 android:background="@android:color/white"
                 android:paddingTop="@dimen/activity_vertical_margin">
 
